--- a/LTT_New_Light_Theme_hotfix.css
+++ b/LTT_New_Light_Theme_hotfix.css
@@ -100,28 +100,28 @@
    background-color: transparent;
 }
 
-a.paper-button {
+a.paper-button, input.paper-button {
    color: #000 !important;	
 }
 
-a:hover.paper-button {
+a:hover.paper-button, input:hover.paper-button {
    text-shadow: 0 0 5px #000;
 }
 
-a.paper-button.colored {
+a.paper-button.colored, input.paper-button.colored {
    color: #000 !important;	
 }
 
-a:hover.paper-button.colored {
+a:hover.paper-button.colored, input:hover.paper-button.colored {
    color: #4285f4 !important;
    text-shadow: 0 0 5px #4285f4;
 }
 
-a.paper-button.orange {
+a.paper-button.orange, input.paper-button.orange {
    color: #000 !important;	
 }
 
-a:hover.paper-button.orange.edit_post, .post_edit.paper-button a:hover {
+a:hover.paper-button.orange, input:hover.paper-button.orange, .post_edit.paper-button a:hover {
    color: #db4105 !important;
    text-shadow: 0 0 5px #db4105;
 }
@@ -135,11 +135,11 @@ a:hover.paper-button.colored.gild_button {
    text-shadow: 0 0 5px #9d7d2e;
 }
 
-.report a {
+.report a, .report input {
    color: #f00 !important;	
 }
 
-.report a:hover {
+.report a:hover, .report input:hover {
    background-color: rgba(256,0,0,0.48);	
    text-shadow: none;
 }
