--- a/LTT_New_Dark_Theme_hotfix.css
+++ b/LTT_New_Dark_Theme_hotfix.css
@@ -1,4 +1,4 @@
-@-moz-document url-prefix("http://linustechtips.com/main") {
+@-moz-document domain("linustechtips.com") {
 /* Code written by: syntaxvgm */
 
 #content, .main_width {
