Classified section update
Corrects the colour contrast of some elements of an individual advert in the Classified section.

--- a/LTT_New_Dark_Theme_hotfix.css
+++ b/LTT_New_Dark_Theme_hotfix.css
@@ -59,6 +59,40 @@
    border-bottom-color: #8f8f8f;
 }
 
+body .price_box, body .purchase_box, body #advertiser_overview ul a {
+   background-color: #323232;
+}
+
+#Carousel>.button {
+   filter: invert(32%);
+   -webkit-filter: invert(32%);
+   -moz-filter: invert(32%);
+   -o-filter: invert(32%);
+   -ms-filter: invert(32%);
+}
+
+ul#tabNav {
+   border-left-color: #111;
+}
+
+ul#tabNav li {
+   background-color: #111;
+}
+
+ul#tabNav li a {
+   background-color: #000;
+   border-color: #111;
+}
+
+ul#tabNav li a:hover {
+   background-color: #0b0b0b;
+}
+
+ul#tabNav li a.selected {
+   color: #cfcfcf;
+   background-color: #323232;
+	border-color: #111;
+}
 
 .gallery_image {
    background-color: #181818;
