Inclusion of announcement post frame
The post frame for staff announcements were previously transparent, faded out to the respective background; this has been fixed

--- a/LTT_New_Light_Theme_hotfix.css
+++ b/LTT_New_Light_Theme_hotfix.css
@@ -48,7 +48,7 @@
    max-width: 99%;
 }
 
-#messenger_content .post_block {
+#messenger_content .post_block, .post_block.announcemen {
    background-color: #fff;
 }
 
@@ -184,7 +184,6 @@ a:hover.paper-button.raised {
 
 .post_body {
    margin-left: 176px;
-	
 }
 
 .post_body .row2 {
