Organization of code
The CSS code has been formatted for better legibility.

--- a/LTT_New_Dark_Theme_hotfix.css
+++ b/LTT_New_Dark_Theme_hotfix.css
@@ -1,7 +1,8 @@
 @-moz-document domain("linustechtips.com") {
 /* Code written by: syntaxvgm */
 
-#content, .main_width {
+#content,
+.main_width {
    max-width: 100%;
 }
 
@@ -36,7 +37,8 @@
    max-width: 99%;
 }
 
-#messenger_content .post_block, .post_block.announcement {
+#messenger_content .post_block,
+.post_block.announcement {
    background-color: #151515;
 }
 
@@ -123,32 +125,40 @@
    background-color: rgba(0, 0, 0, 0.2);
 }
 
-.author_info .row2, .author_info .post_block.row2 {
+.author_info .row2,
+.author_info .post_block.row2 {
    background-color: transparent;
 }
 
-a.paper-button, input.paper-button {
+a.paper-button,
+input.paper-button {
    color: #e8e8e8 !important;
 }
 
-a:hover.paper-button, input:hover.paper-button {
+a:hover.paper-button,
+input:hover.paper-button {
    text-shadow: 0 0 5px #e8e8e8;
 }
 
-a.paper-button.colored, input.paper-button.colored {
+a.paper-button.colored,
+input.paper-button.colored {
    color: #e8e8e8 !important;	
 }
 
-a:hover.paper-button.colored, input:hover.paper-button.colored {
+a:hover.paper-button.colored,
+input:hover.paper-button.colored {
    color: #4285f4 !important;
    text-shadow: 0 0 5px #4285f4;
 }
 
-a.paper-button.orange, input.paper-button.orange {
+a.paper-button.orange,
+input.paper-button.orange {
    color: #e8e8e8 !important;	
 }
 
-a:hover.paper-button.orange, input:hover.paper-button.orange, .post_edit.paper-button a:hover {
+a:hover.paper-button.orange,
+input:hover.paper-button.orange,
+.post_edit.paper-button a:hover {
    color: #db4105 !important;
    text-shadow: 0 0 5px #db4105;
 }
@@ -162,11 +172,13 @@ a:hover.paper-button.colored.gild_button {
    text-shadow: 0 0 5px #ff0;
 }
 
-.report a, .report input {
+.report a,
+.report input {
    color: #f00 !important;	
 }
 
-.report a:hover, .report input:hover {
+.report a:hover,
+.report input:hover {
    background-color: rgba(256,0,0,0.48);	
    text-shadow: none;
 }
@@ -212,7 +224,8 @@ a:hover.paper-button.raised {
    min-height: 100%;
 }
 
-.cm-post-date.left.desc.lighter.ipsType_small, .row2 p {
+.cm-post-date.left.desc.lighter.ipsType_small,
+.row2 p {
    margin-left: 8px;
 }
 
