'Best Answer' post is visible
This change of colour allows the post that has been marked as 'Answered' stand out from the other posts.

--- a/LTT_New_Dark_Theme_hotfix.css
+++ b/LTT_New_Dark_Theme_hotfix.css
@@ -74,6 +74,10 @@
    -ms-filter: invert(90%);
 }
 
+.post_block.solved {
+   background-color: rgba(0,255,0,0.1);
+}
+
 .post_block .ipsUserPhoto_large {
    width: auto;
    height: auto;
